Basic Website Elements

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>What To Eat Today?</title>
+
+    <link rel="shortcut icon" href="%PUBLIC_URL%/img/icon.svg"/>
+
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <!-- STYLES -->
+    <link href="%PUBLIC_URL%/style/site.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/style/header.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/style/footer.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/style/anim.viewport.css" rel="stylesheet">
+
+    <!-- META ELEMENTS -->
+    <meta name="What To Eat Today?">
+    <meta name="description" content="A Generator for a quick and easy weeknight Meal, fitted to your Likings.">
+    <meta name="keywords" content="food,generator,random,weeknight,quick,easy">
+    <meta http-equiv="expires" content="34200">
+
+    <meta name="og:title" content="What To Eat Today?">
+    <meta name="og:description" content="A Generator for a quick and easy weeknight Meal, fitted to your Likings.">
+    <meta name="og:image" content="%PUBLIC_URL%/img/icon.svg">
+    <meta name="og:url" content="https://jensostertag.github.io/whattoeattoday?">
+
+    <meta name="twitter:title" content="What To Eat Today?">
+    <meta name="twitter:description" content="A Generator for a quick and easy weeknight Meal, fitted to your Likings.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/img/icon.svg">
+    <meta name="twitter:card" content="%PUBLIC_URL%/img/icon.svg">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id="root">
+      <noscript>
+        <nav>
+          <div class="logo">
+            <a href="./">
+                <img src="./img/icon.svg" />
+                <p>What To Eat Today?</p>
+            </a>
+        </div>
+        </nav>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+        <section class="errormessage">
+          <h1>
+            :(
+          </h1>
+          <p>
+            Please enable JavaScript to use this Website.
+          </p>
+          <p style="color: gray">
+            This Website was created with React.js. Therefore, it requires JavaScript to be enabled to show Contents.
+          </p>
+        </section>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+        <footer>
+          <hr>
+          <div class="wrapper">
+              <div class="footer-text">
+                  <div class="footer-logo">
+                      <img src="./img/icon.svg" alt="" />
+                      What To Eat Today?
+                  </div>
+                  <span><p class="copyright">&copy; 2020 - 2022 &nbsp; </p></span><span><p>Jens Ostertag</p></span>
+              </div>
+          </div>
+      </footer>
+      </noscript>
+    </div>
   </body>
 </html>
